--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"@testing-library/jest-dom": "^5.16.3",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.26.1",
 		"lodash": "^4.17.21",
 		"react": "^18.0.0",
 		"react-burger-menu": "^3.0.6",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
+		"react-loading-icons": "^1.0.8",
 		"react-responsive": "^9.0.0-beta.6",
 		"react-responsive-carousel": "^3.2.23",
 		"react-scripts": "5.0.0",
