--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@craco/craco": "^6.4.3",
 		"@emotion/react": "^11.8.2",
 		"@emotion/styled": "^11.8.1",
+		"@reduxjs/toolkit": "^1.8.1",
 		"@testing-library/jest-dom": "^5.16.3",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
@@ -16,11 +17,13 @@
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
 		"react-loading-icons": "^1.0.8",
+		"react-redux": "^7.2.8",
 		"react-responsive": "^9.0.0-beta.6",
 		"react-responsive-carousel": "^3.2.23",
 		"react-scripts": "5.0.0",
 		"react-scroll": "^1.8.6",
 		"styled-components": "^5.3.5",
+		"sweetalert2": "^11.4.8",
 		"twin.macro": "^2.8.2",
 		"web-vitals": "^2.1.4"
 	},
